<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>io.demo</groupId>
	<artifactId>digitalbank</artifactId>
	<version>${revision}</version>
	<packaging>jar</packaging>

	<name>Digital Bank</name>
	<description>Digital Online Banking Sample Application</description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.1.7.RELEASE</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<repositories>
		<repository>
			<id>bintray-ca-sv</id>
			<name>bintray-ca</name>
			<url>http://ca.bintray.com/sv</url>
		</repository>
	</repositories>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>8</java.version>
		<serenity.version>2.0.40</serenity.version>
		<serenity.maven.version>2.0.40</serenity.maven.version>
		<serenity.spring.version>2.0.40</serenity.spring.version>
        <serenity.cucumber.version>1.9.31</serenity.cucumber.version>
        <selenium.version>3.141.59</selenium.version>
        <tags></tags>
        <parallel.tests>1</parallel.tests>
        <webdriver.driver>firefox</webdriver.driver>
        <webdriver.base.url>http://localhost:8080/</webdriver.base.url>
        <buildNumber>local</buildNumber>
        <revision>1.0.1.${buildNumber}</revision>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-tomcat</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
    		<groupId>io.jsonwebtoken</groupId>
    		<artifactId>jjwt</artifactId>
    		<version>0.9.1</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
     		<groupId>org.springframework.boot</groupId>
     		<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 		<dependency>
    		<groupId>com.fasterxml.jackson.module</groupId>
    		<artifactId>jackson-module-kotlin</artifactId>
		</dependency>
 		<dependency>
    		<groupId>io.springfox</groupId>
    		<artifactId>springfox-swagger2</artifactId>
    		<version>2.9.2</version>
		</dependency>
		<dependency>
    		<groupId>io.springfox</groupId>
    		<artifactId>springfox-swagger-ui</artifactId>
    		<version>2.9.2</version>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
            <groupId>com.microsoft.sqlserver</groupId>
            <artifactId>mssql-jdbc</artifactId>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
        </dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
        	<groupId>javax.xml.bind</groupId>
        	<artifactId>jaxb-api</artifactId>
		</dependency>
		<dependency>
    		<groupId>com.github.javafaker</groupId>
    		<artifactId>javafaker</artifactId>
    		<version>1.0.0</version>
		</dependency>
		
		<!-- Serenity BDD Cucumber -->		
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-core</artifactId>
            <version>${serenity.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
    		<groupId>net.serenity-bdd</groupId>
    		<artifactId>serenity-spring</artifactId>
    		<version>${serenity.spring.version}</version>
    		<scope>test</scope>
		</dependency>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-junit</artifactId>
            <version>${serenity.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-cucumber</artifactId>
            <version>${serenity.cucumber.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-rest-assured</artifactId>
            <version>${serenity.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-reports</artifactId>
            <version>${serenity.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-all</artifactId>
            <version>1.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
		    <groupId>com.google.guava</groupId>
		    <artifactId>guava</artifactId>
		    <version>27.0.1-jre</version>
		</dependency>
		<dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${selenium.version}</version><!--$NO-MVN-MAN-VER$-->
            <scope>test</scope>
        </dependency>
		<dependency>
	       	<groupId>org.seleniumhq.selenium</groupId>
	       	<artifactId>selenium-remote-driver</artifactId>
	       	<version>${selenium.version}</version><!--$NO-MVN-MAN-VER$-->
	       	<scope>test</scope>
    	</dependency>
    	<dependency>
        	<groupId>org.seleniumhq.selenium</groupId>
        	<artifactId>selenium-firefox-driver</artifactId>
        	<version>${selenium.version}</version><!--$NO-MVN-MAN-VER$-->
        	<scope>test</scope>
    	</dependency>
    	<dependency>
        	<groupId>org.seleniumhq.selenium</groupId>
        	<artifactId>selenium-chrome-driver</artifactId>
        	<version>${selenium.version}</version><!--$NO-MVN-MAN-VER$-->
        	<scope>test</scope>
    	</dependency>
    	<dependency>
        	<groupId>org.seleniumhq.selenium</groupId>
        	<artifactId>selenium-support</artifactId>
        	<version>${selenium.version}</version><!--$NO-MVN-MAN-VER$-->
        	<scope>test</scope>
    	</dependency>
    	<dependency>
        	<groupId>org.seleniumhq.selenium</groupId>
        	<artifactId>selenium-api</artifactId>
        	<version>${selenium.version}</version><!--$NO-MVN-MAN-VER$-->
        	<scope>test</scope>
    	</dependency>

		<!-- CodeSV public build -->
		<dependency>
			<groupId>com.ca.codesv</groupId>
			<artifactId>codesv-dist-jar</artifactId>
			<version>1.3.0</version>
			<scope>test</scope>
		</dependency>

	</dependencies>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>build-info</id>
						<goals>
							<goal>build-info</goal>
						</goals>
					</execution>
				<!-- Uncomment to auto start/stop application for test execution 	
				   <execution>
			          <id>pre-integration-test</id>
			          <goals>
			            <goal>start</goal>
			          </goals>
			        </execution>
			        <execution>
			          <id>post-integration-test</id>
			          <goals>
			            <goal>stop</goal>
			          </goals>
			        </execution> 
			    -->
				</executions>
			</plugin>    
			<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M3</version><!--$NO-MVN-MAN-VER$-->
                <configuration>
                    <skip>true</skip>
                    <forkCount>0</forkCount>
                    <threadCount>1</threadCount>
                    <argLine></argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version><!--$NO-MVN-MAN-VER$-->
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.0.0-M3</version><!--$NO-MVN-MAN-VER$-->
                <configuration>
                    <includes>
                        <include>**/*Test*.java</include>
                    </includes>
                    <systemPropertyVariables>
                        <webdriver.base.url>${webdriver.base.url}</webdriver.base.url>
                    </systemPropertyVariables>
                    <parallel>classes</parallel>
                    <threadCount>${parallel.tests}</threadCount>
                    <forkCount>${parallel.tests}</forkCount>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
			<plugin>
                <groupId>net.serenity-bdd.maven.plugins</groupId>
                <artifactId>serenity-maven-plugin</artifactId>
                <version>${serenity.maven.version}</version>
                <configuration>
                  <tags>${tags}</tags>
                </configuration>
                <executions>
                    <execution>
                        <id>serenity-reports</id>
                        <phase>post-integration-test</phase>
                        <goals>
                            <goal>aggregate</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin> 
		</plugins>
	</build>
</project>
